--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,16 +19,11 @@ jobs:
         with:
           node-version: '18.x'
           
-      - uses: Teakowa/setup-serverless@v2
-        with:
-          serverless_version: 3.9.0
-          provider: aws
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY}}
+      - name: Install dependencies
+        run: npm install -g serverless
 
       - name: Configure serverless authentication
-        run: sls config credentials --provider aws --key ${{ secrets.AWS_ACCESS_KEY }} --secret ${{ secrets.AWS_SECRET_KEY }}
+        run: serverless config credentials --provider aws --key ${{ secrets.AWS_ACCESS_KEY }} --secret ${{ secrets.AWS_SECRET_KEY }}
       
       - name: Install npm dependencies
         run: npm install
