--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "TypeScript + Sequelize + MySQL + Express API Server",
   "author": "",
   "license": "ISC",
+  "type": "module",
   "scripts": {
     "start": "npm run build && cross-env NODE_ENV=production node dist/server.js",
     "dev": "cross-env NODE_ENV=development nodemon --legacy-watch",
@@ -41,6 +42,7 @@
     "stripe": "^12.1.1",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.5.0",
+    "tsc": "^2.0.4",
     "twilio": "^4.17.0",
     "typedi": "^0.10.0",
     "winston": "^3.8.1",
