--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,7 +28,7 @@ jobs:
         id: verifyvars
         run: |
           echo "ENVIRONMENT_OUTPUT= $environment_output" 
-          
+
   build-container:
     runs-on: ubuntu-latest
     environment: ${{ needs.init.outputs.environment_output }}
@@ -83,6 +83,7 @@ jobs:
             DB_DATABASE=${{ vars.DB_DATABASE }}
             ORIGIN=${{ vars.ORIGIN }}
             CREDENTIALS=${{ vars.CREDENTIALS }}
+            NODE_ENV=${{ needs.init.outputs.environment_output }}
         
 
 
